// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should render with a label 1`] = `
<ng-component
  testedWidget={[Function NgAisToggle]}
>
  <ais-instantsearch>
    <ais-toggle>
      <div
        class="ais-ToggleRefinement"
      >
        <label
          class="ais-ToggleRefinement-label"
        >
          <input
            class="ais-ToggleRefinement-checkbox"
            type="checkbox"
            value="foobar"
          />
          <span
            class="ais-ToggleRefinement-labelText"
          >
             Foo Label 
          </span>
          <span
            class="ais-ToggleRefinement-count"
          >
            666
          </span>
        </label>
      </div>
    </ais-toggle>
  </ais-instantsearch>
</ng-component>
`;

exports[`Toggle should render with state 1`] = `
<ng-component
  testedWidget={[Function NgAisToggle]}
>
  <ais-instantsearch>
    <ais-toggle>
      <div
        class="ais-ToggleRefinement"
      >
        <label
          class="ais-ToggleRefinement-label"
        >
          <input
            class="ais-ToggleRefinement-checkbox"
            type="checkbox"
            value="foobar"
          />
          <span
            class="ais-ToggleRefinement-labelText"
          >
             foobar 
          </span>
          <span
            class="ais-ToggleRefinement-count"
          >
            666
          </span>
        </label>
      </div>
    </ais-toggle>
  </ais-instantsearch>
</ng-component>
`;

exports[`Toggle should render without state 1`] = `
<ng-component
  testedWidget={[Function NgAisToggle]}
>
  <ais-instantsearch>
    <ais-toggle>
      <div
        class="ais-ToggleRefinement"
      >
        <label
          class="ais-ToggleRefinement-label"
        >
          <input
            class="ais-ToggleRefinement-checkbox"
            type="checkbox"
            value=""
          />
          <span
            class="ais-ToggleRefinement-labelText"
          >
              
          </span>
          <span
            class="ais-ToggleRefinement-count"
          >
            
          </span>
        </label>
      </div>
    </ais-toggle>
  </ais-instantsearch>
</ng-component>
`;
